# dotfiles

./: .claude  .gitignore  .ignore  .stylua.toml  AGENTS.md  Brewfile  README.md  bootstrap.sh  brew_install.sh  check_cmd.sh  check_dir.sh  dotfiles.todo  ginit.vim  init.vim  install.conf.yaml  os_specific_links.sh  packages.toml  pyproject.toml
.tasks/: DONE-cross-client-task-handoff.md  DONE-opencode-plugin-update.md  DONE-shared-ai-configuration.md  cleanup-legacy-scripts.md  opencode-plugin-update.md  tmux-to-zellij-migration.md  todo-context-skill.md  update-skill.md
ai/: AGENTS.md
alacritty/: alacritty.osx.toml  alacritty.toml  alacritty.wsl.toml  alacritty.yml
cheatsheets/: 12-factor.md  git.md  vim.md
coc/: package.json
ctags.d/: excludes.ctags
gdrive-ocamlfuse/: config
iterm2/: README.md  com.googlecode.iterm2.plist  link-iterm2.sh
jsbeautify/: .jsbeautifyrc
karabiner/: karabiner.json  link-karabiner.sh
marta/: conf.json
nvim/: coc-settings.json  ginit.vim  init.lua  init.vim  link-nvim.sh  link.sh
ollama/: gen_qwen3_coder_model.sh  ollama-gpu-serve-osx.sh  qwen3-coder.Modelfile  update_ollama_images.sh
opencode/: AGENTS.md  gen_qwen3_coder_model.sh  opencode.jsonc  qwen3-coder.Modelfile
phoenix/: .eslintrc.yml  .phoenix.js  phoenix.js
rg/: .ignore  link-rg.sh
scripts/: cleanup.sh  doi-cert.sh  generate-brewfile.sh  piget.sh  piput.sh  switch_node.sh  update.sh
spaceship/: spaceship.zsh
spell/: en.utf-8.add  en.utf-8.add.spl
starship/: starship.toml
tig/: .tigrc
tmux/: .tmux.conf  custom.tmuxtheme  link-tmux.sh
(+150 files in other folders)
